Add deployable browser frontend